tests/error/array_invalid1.gw
// [contains] invalid format for array init
[ [1,2] [3,4] ];
